<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">projectmanagement</string>
    <string name="title_activity_main">Sourcefish PM</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="username_label">Username</string>
    <string name="password_label">Password</string>
    <string name="login_btn">Log in</string>
    <string name="cancel">Register</string>
    <string name="ok">OK</string>
    <string name="title_activity_project">Projects</string>
    <string name="label_password_repeat">Repeat password:</string>
    <string name="title_activity_entry">Entry</string>
    <string name="title_activity_specific_entry">SpecificEntryActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="stopbuttontext">stopentry</string>
    <string name="projectnaam">Project name:</string>
    <string name="klant">Customer:</string>
    <string name="description_new_entry">Description:</string>
    <string name="start_new_entry">Start Entry</string>
    <string name="Description">Description:</string>
    <string name="New">Send</string>
    <string name="description_new_entry">Description:</string>
    <string name="start_new_entry">Start Entry</string>
    <string name="btn_set_starting_time">Set start time</string>
    <string name="btn_set_end_time">Set end time</string>
    <string name="btn_set_start_date">Set start date</string>
    <string name="btn_set_end_date">Set end date</string>
    <string name="editKlant">Klant:</string>
    <string name="editDesc">Descriptie:</string>
    <string name="editName">Project Name:</string>
    <string name="title_activity_project_edit">ProjectEditActivity</string>
    <string name="edit">Edit</string>
    <string name="widgetmoodtext">TODO</string>
    <string name="widgettext">Stop Project</string>

</resources>