<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/projectnaam"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/projectnameView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/klant"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/customerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Description"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/descriptionView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.41"
        android:ems="10"
        
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/New" 
        android:onClick="SendButton"
        />

</LinearLayout>