<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent" android:layout_height="fill_parent"
	android:id="@+id/user_credential">
	<LinearLayout
		android:layout_alignParentTop="true"
		android:layout_width="fill_parent"
		
		android:id="@+id/head"
		android:layout_height="84dip">
	</LinearLayout>
	<LinearLayout android:layout_height="fill_parent"
		android:layout_width="fill_parent" android:id="@+id/body"
		android:layout_below="@+id/head" >
		<LinearLayout android:id="@+id/linearLayout1"
			android:layout_height="fill_parent" android:layout_width="fill_parent"
			android:orientation="vertical" android:padding="15dip">
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:id="@+id/uc_lbl_registerUsername"
				android:text="@string/username_label"></TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/uc_txt_registerUsername" android:inputType="textEmailAddress"></EditText>
			<TextView android:layout_height="wrap_content"
				android:layout_width="wrap_content" android:id="@+id/uc_lbl_registerPassword"
				android:text="@string/password_label"></TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/uc_txt_registerPassword" android:inputType="textPassword"></EditText>

			<TextView
			    android:id="@+id/uc_lbl_registerPasswordrepeat"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/label_password_repeat" >
			</TextView>
			<EditText android:layout_height="wrap_content"
				android:layout_width="fill_parent" android:id="@+id/uc_txt_registerPasswordrepeat" android:inputType="textPassword"></EditText>
			<RelativeLayout android:layout_width="fill_parent"
				android:id="@+id/relativeLayout1" android:layout_height="fill_parent"
				android:gravity="bottom">
			<Button android:layout_alignParentLeft="true"
				android:onClick="onCancelClick"
				android:layout_height="wrap_content" android:layout_width="wrap_content"
				android:id="@+id/uc_cmd_cancel" android:text="@string/cancel"></Button>

			<Button
			    android:id="@+id/uc_cmd_ok"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_alignParentRight="true"
			    android:onClick="Register"
			    android:text="@string/ok" >
</Button>
			</RelativeLayout>
		</LinearLayout>
	</LinearLayout>
</RelativeLayout>